<resources>
    <string name="app_name">SanbotExp</string>
    <string name="action_settings">Settings</string>

    <string name="white_light_on">Turn on White Light</string>
    <string name="white_light_brighter">Make the WhiteLight brighter</string>
    <string name="all_led_on">Turn on all LED\'s</string>
    <string name="turn_head_led_on">Turn head LED on</string>

    <string name="head_activity">Head Movement Demo</string>
    <string name="relative_head_movement">Head movements relative to current position</string>
    <string name="head_left">Turn head left</string>
    <string name="head_right">Turn head right</string>
    <string name="head_down">Turn head down</string>
    <string name="head_up">Turn head up</string>
    <string name="head_center">Reset head to center position</string>
    <string name="head_absolute_up">turn head absolute up</string>
    <string name="head_absolute_left">turn head absolute left</string>
    <string name="head_absolute_right">turn head absolute right</string>
    <string name="head_absolute_down">turn head absolute down</string>
    <string name="absolute_head_movement">Absolute head movements</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="touch_activity">Touch Sensor Demo</string>
    <string name="touch_listener">Nothing has been touched yet...</string>

    <string name="speech_activity">Speech Demo</string>
    <string name="editable_speech_text">Edit this text</string>
    <string name="test_text">Let Sanbot say your text</string>
    <string name="trial_text">Or try a lorem Ipsum</string>

    <string name="led_on">Leds on</string>
    <string name="led_off">Leds off</string>

    <string name="say_hi">Make Sanbot talk</string>
    <string name="set_emotion">See Sanbots Emotion</string>

    <string name="textview_wielen">Wielen</string>
    <string name="movement_forward">Move Forward</string>
    <string name="turn_left">Turn 45 degrees left</string>
    <string name="no_angle_wheel_motion">Ga 3 seconden vooruit</string>

    <string name="video_stream">Start video stream</string>
    <string name="close_video_stream">Close video stream</string>

    <string name="wheel_activity_starter">Wheel movement demo</string>
    <string name="lights_activity">Lights demo</string>
    <string name="shake_hands">Shake Sanbots hand!</string>
    <string name="arm_activity">Arm Movement Demo</string>
    <string name="move_hands_up">move hands up</string>
    <string name="move_hands_down">move hands down</string>
    <string name="sound_source">The sounds are coming from...</string>
    <string name="sound_activity">Sound Source Demo</string>
    <string name="camera_activity">Camera Demo</string>
    <string name="camera_start">Camera activity started succesfully</string>
    <string name="pir_start">Is there a PIR?</string>
    <string name="pir_value">PlaceHolder</string>
    <string name="pirStarter">PIR demo</string>
    <string name="projector_activity">Projector Demo</string>
    <string name="start_projector">Start the projector</string>
    <string name="check_projector">Check if projector is turned on</string>
    <string name="close_projector">Close Projector</string>
    <string name="wall">Project on the wall</string>
    <string name="ceiling">Project on the ceiling</string>
    <string name="projection_mode">What mode of projection should we use?</string>
    <string name="close_mirror">Dont mirror objects</string>
    <string name="all_mirror">Mirror all objects upside down and left to right</string>
    <string name="mirror_mode">Set mirror mode</string>
    <string name="ud_mirror">Mirror up-down</string>
    <string name="lr_mirror">Mirror left-right</string>
    <string name="awake_speech">Awake</string>
    <string name="sleep_speech">sleep</string>
    <string name="spokenText">This will show your spoken text</string>
    <string name="emotion_activity">Emotion Demo</string>

    <string name="mad_emotion">Mad</string>
    <string name="shy_emotion">shy</string>
    <string name="smile_emotion">smile</string>

    <string name="right_chin">Right chin</string>
    <string name="touched">was touched</string>
    <string name="left_chin">left chin</string>
    <string name="left_chest">Left chest</string>
    <string name="right_chest">Right chest</string>
    <string name="left_wing">Left wing</string>
    <string name="left_chest_back">Left side back chest</string>
    <string name="right_chest_back">Right side chest back</string>
    <string name="left_back">Left back</string>
    <string name="right_back">Right back</string>
    <string name="right_wing">Right wing</string>
    <string name="center_head">Center of head</string>
    <string name="right_head">right head</string>
    <string name="left_head">left head</string>
    <string name="pir_front">Someone is infront of Sanbot</string>
    <string name="pir_back">Someone is behind Sanbot</string>
    <string name="recognition">FaceRecognition</string>
    <string name="recognition_activity">Recognition Demo</string>
    <string name="FaceRecognized">Your name is</string>

</resources>
