<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/whiteLightOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_light_on" />

        <Button
            android:id="@+id/whiteLightBrighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_light_brighter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/turnOnAllLed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/all_led_on" />

        <Button
            android:id="@+id/turnOnHead"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/turn_head_led_on" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/turnLedsOff"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/led_off" />
    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>