<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:inputType="text"
        android:id="@+id/testText"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/editable_speech_text"/>
    <Button
        android:id="@+id/startText"
        app:layout_constraintTop_toBottomOf="@+id/testText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_text"/>
    <Button
        android:id="@+id/exampleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startText"
        android:text="@string/trial_text"/>


</android.support.constraint.ConstraintLayout>