<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/startProjector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_projector" />

    <Button
        android:id="@+id/checkProjector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startProjector"
        android:text="@string/check_projector" />
    <Button
        android:id="@+id/closeProjector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/startProjector"
        android:text="@string/close_projector" />
</android.support.constraint.ConstraintLayout>