<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_head_movement"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/moveHeadRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_right" />

        <Button
            android:id="@+id/moveHeadLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_left" />

        <Button
            android:id="@+id/moveHeadUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_up" />

        <Button
            android:id="@+id/moveHeadDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/resetHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/absolute_head_movement"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/moveHeadAbsoluteRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_right" />

        <Button
            android:id="@+id/moveHeadAbsoluteLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_left" />

        <Button
            android:id="@+id/moveHeadAbsoluteUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_up" />

        <Button
            android:id="@+id/moveHeadAbsoluteDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onHeadClick"
            android:text="@string/head_down" />
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>