<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shake_hands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shake_hands"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/shake_hands"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/moveHandsUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/move_hands_up"
            android:background="@color/colorAccent"
            app:layout_constraintRight_toLeftOf="@+id/moveHandsDown" />

        <Button
            android:id="@+id/moveHandsDown"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/moveHandsUp"
            android:layout_height="wrap_content"
            android:text="@string/move_hands_down" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>